FIX: Scroll on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -176,7 +176,7 @@ html.lenis {
 html,
 body {
   background-color: #f9f5f0;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 body {
